--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,15 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Avaliação contínua</title>
+</head>
+<body>
+    <h1>Avaliação contínua: Aula 030</h1>
     <ul>
-        <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="{{ url_for('identificacao') }}">Identificação</a></li>
-        <li><a href="{{ url_for('contexto') }}">Contexto da requisição</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/identificacao">Identificação</a></li>
+        <li><a href="/contexto">Contexto da requisição</a></li>
     </ul>
-{% endblock %}
+</body>
+</html>
